Fixed URL not displaying issue by wrapping in button

--- a/find-my-recipe/src/pages/RecipeDisplay.css
+++ b/find-my-recipe/src/pages/RecipeDisplay.css
@@ -204,3 +204,28 @@ ol{
   	padding-right: 0;
 	padding-left: 20px;
 }
+
+.SourceButton{
+	border-radius: 16px;
+    background-color: #2541B2;
+    color: #FFFFFF;
+    font-size: 12px;
+    font-weight: bold;
+    padding: 12px 45px;
+    letter-spacing: 1px;
+    border:none;
+    outline: none;
+}
+
+.SourceButton:hover{
+    background-color:#878787;
+}
+
+.SourceButton:active{
+    background-color: #878787;
+}
+
+.SourceButton:focus{
+    border:none;
+    outline: none;
+}
